fix(ignis/media.py): litle fixes for align

--- a/.config/ignis/scss/media.scss
+++ b/.config/ignis/scss/media.scss
@@ -73,6 +73,8 @@ $gradient-{{ desktop_entry }}: {{ onPrimary }};
 .media-player-icon-{{ desktop_entry }} {
     color: {{ primary }};
     font-size: 1.6rem;
+    padding: 1rem;
+    font-family: "JetBrains Mono Nerd Font";
 }
 
 .media-skip-button-{{ desktop_entry }} {
